--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@ body{
 <script>
 /* ------------------------- CONFIG ------------------------- */
 const API_URL = "https://script.google.com/macros/s/AKfycbyYhzmDmqhqj450cDrRX4_1DDaHKFo6CZOTQpA0SoMZ1ngq9ALmjcZUOA9oFLqeaoiI/exec";
-const RAZORPAY_KEY = "rzp_live_RukjWIITK7i5hU"; // TODO change to your Razorpay key
+const RAZORPAY_KEY = "rzp_live_Rzrtya5sXER7Ws"; // TODO change to your Razorpay key
 
 
 // ===== ORDER STATUS FLOW (Flipkart style) =====
