--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ body{
   display:flex;
   gap:12px;
   position:relative;
-  padding:0 0 28px 0;
+  padding-bottom:28px;
 }
 
 .timeline-step:last-child{
@@ -772,9 +772,9 @@ body{
 .timeline-step::before{
   content:'';
   position:absolute;
-  left:6px;
-  top:-18px;              /* ⬅️ upar wale dot se connect */
-  height:calc(100% + 18px); /* ⬅️ neeche tak full */
+  left:7px;          /* dot center */
+  top:7px;           /* dot center se start */
+  height:100%;
   width:2px;
   background:#ddd;
 }
@@ -788,8 +788,9 @@ body{
   height:14px;
   border-radius:50%;
   background:#ccc;
-  margin-top:2px;
-  flex-shrink:0;
+  margin-top:0;
+  position:relative;
+  z-index:2;
 }
 
 
