--- a/index.html
+++ b/index.html
@@ -2762,7 +2762,9 @@ if(o.events && o.events.length){
   renderEventsTimeline(o.events);
 }
 
-renderStatusTimeline(o.status || 'Placed');
+if(o.events && o.events.length){
+  renderEventsTimeline(o.events);
+}
       const cartHtml = (function(cartData){
         try{
           const arr = (typeof cartData === 'string')
@@ -3498,8 +3500,9 @@ function renderEventsTimeline(events){
 
   box.style.display = 'block';
 
-  // titles in correct order
-  const doneTitles = events.map(e => e.title);
+  const doneTitles = events.map(e =>
+    String(e.title || '').trim()
+  );
 
   box.innerHTML = STATUS_FLOW.map((step) => {
     const idx = doneTitles.indexOf(step);
@@ -3522,6 +3525,7 @@ function renderEventsTimeline(events){
     `;
   }).join('');
 }
+
 
   /* ===== FIXED 10% COUPON ONLY ===== */
 let appliedCouponCode = '';
